--- a/vityaz/index.html
+++ b/vityaz/index.html
@@ -214,7 +214,7 @@
             </div>
         </section>
         <section class="geo">
-            <div class="geo__bg__box">
+            <div class="geo__bg">
                 <div class="container">
                     <div class="section__title geo__title">Геолокация</div>
                     <div class="geo__box">
@@ -231,9 +231,7 @@
                             </div>
                         </div>
                         <div class="geo__right">
-                            <div class="geo__map">
-                                <img src="img/geo_map.jpg" alt="#">
-                            </div>
+                            <img src="img/geo_map.jpg" alt="#">
                         </div>
                     </div>
                 </div>
@@ -258,13 +256,13 @@
                         </div>
                     </div>
                     <div class="news__tabcontent">
-                        <div class="news__item">
+                        <div class="news__item news__item__first">
                             <div class="news__subtitle">Lorem ipsum dolor sit amet 2</div>
                             <div class="news__text">
                                 <p>Consectetur adipiscing elit. Donec nec libero ac enim viverra tempor. Etiam quam nunc, ullamcorper non faucibus ac, aliquam et risus. Donec iaculis eget lacus ut tristique. Etiam id commodo arcu. Consectetur adipiscing elit. Donec nec libero ac enim viverra tempor. Etiam quam nunc, ullamcorper non faucibus ac, aliquam et risus. Donec iaculis eget lacus ut tristique. Etiam id commodo arcu.</p>
                             </div>
                         </div>
-                        <div class="news__item">
+                        <div class="news__item news__item__second">
                             <div class="news__subtitle">Lorem ipsum dolor sit amet 2</div>
                             <div class="news__text">
                                 <p>Consectetur adipiscing elit. Donec nec libero ac enim viverra tempor. Etiam quam nunc, ullamcorper non faucibus ac, aliquam et risus. Donec iaculis eget lacus ut tristique. Etiam id commodo arcu. Consectetur adipiscing elit. Donec nec libero ac enim viverra tempor. Etiam quam nunc, ullamcorper non faucibus ac, aliquam et risus. Donec iaculis eget lacus ut tristique. Etiam id commodo arcu.</p>
@@ -272,13 +270,13 @@
                         </div>
                     </div>
                     <div class="news__tabcontent">
-                        <div class="news__item">
+                        <div class="news__item news__item__first">
                             <div class="news__subtitle">Lorem ipsum dolor sit amet 3</div>
                             <div class="news__text">
                                 <p>Consectetur adipiscing elit. Donec nec libero ac enim viverra tempor. Etiam quam nunc, ullamcorper non faucibus ac, aliquam et risus. Donec iaculis eget lacus ut tristique. Etiam id commodo arcu. Consectetur adipiscing elit. Donec nec libero ac enim viverra tempor. Etiam quam nunc, ullamcorper non faucibus ac, aliquam et risus. Donec iaculis eget lacus ut tristique. Etiam id commodo arcu.</p>
                             </div>
                         </div>
-                        <div class="news__item">
+                        <div class="news__item news__item__second">
                             <div class="news__subtitle">Lorem ipsum dolor sit amet 3</div>
                             <div class="news__text">
                                 <p>Consectetur adipiscing elit. Donec nec libero ac enim viverra tempor. Etiam quam nunc, ullamcorper non faucibus ac, aliquam et risus. Donec iaculis eget lacus ut tristique. Etiam id commodo arcu. Consectetur adipiscing elit. Donec nec libero ac enim viverra tempor. Etiam quam nunc, ullamcorper non faucibus ac, aliquam et risus. Donec iaculis eget lacus ut tristique. Etiam id commodo arcu.</p>
@@ -356,53 +354,49 @@
             <div class="footer__box">
                 <div class="footer__item">
                     <div class="footer__subtitle">Услуги</div>
-                    <div class="footer__links">
-                        <ul>
-                            <li>
-                                <a href="#">Физическая охрана</a>
-                            </li>
-                            <li>
-                                <a href="#">Видеонаблюдение</a>
-                            </li>
-                            <li>
-                                <a href="#">Пультовая охрана</a>
-                            </li>
-                            <li>
-                                <a href="#">Пожарная сигнализация и противопожарные системы</a>
-                            </li>
-                            <li>
-                                <a href="#">Технические средства охраны зданий, сооружений и периметров</a>
-                            </li>
-                            <li>
-                                <a href="#">Системы контроля и управления доступом</a>
-                            </li>
-                            <li>
-                                <a href="#">Дополнитеньные услуги</a>
-                            </li>
-                        </ul>
-                    </div>
+                    <ul>
+                        <li>
+                            <a href="#">Физическая охрана</a>
+                        </li>
+                        <li>
+                            <a href="#">Видеонаблюдение</a>
+                        </li>
+                        <li>
+                            <a href="#">Пультовая охрана</a>
+                        </li>
+                        <li>
+                            <a href="#">Пожарная сигнализация и противопожарные системы</a>
+                        </li>
+                        <li>
+                            <a href="#">Технические средства охраны зданий, сооружений и периметров</a>
+                        </li>
+                        <li>
+                            <a href="#">Системы контроля и управления доступом</a>
+                        </li>
+                        <li>
+                            <a href="#">Дополнитеньные услуги</a>
+                        </li>
+                    </ul>
                 </div>
                 <div class="footer__item">
                     <div class="footer__subtitle">ЧОО Витязь-96</div>
-                    <div class="footer__links">
-                        <ul>
-                            <li>
-                                <a href="#">О компании</a>
-                            </li>
-                            <li>
-                                <a href="#">Лицензия</a>
-                            </li>
-                            <li>
-                                <a href="#">Договор оферты</a>
-                            </li>
-                            <li>
-                                <a href="#">Политика конфиденциальности</a>
-                            </li>
-                        </ul>
-                        <a href="#" class="footer__logo">
-                            <img src="img/about_logo.png" alt="#">
-                        </a>
-                    </div>
+                    <ul>
+                        <li>
+                            <a href="#">О компании</a>
+                        </li>
+                        <li>
+                            <a href="#">Лицензия</a>
+                        </li>
+                        <li>
+                            <a href="#">Договор оферты</a>
+                        </li>
+                        <li>
+                            <a href="#">Политика конфиденциальности</a>
+                        </li>
+                    </ul>
+                    <a href="#" class="footer__logo">
+                        <img src="img/about_logo.png" alt="#">
+                    </a>
                 </div>
                 <div class="footer__item">
                     <div class="footer__subtitle">Контакты</div>
