--- a/vityaz/index.html
+++ b/vityaz/index.html
@@ -353,7 +353,7 @@
         <div class="container">
             <div class="footer__box">
                 <div class="footer__item">
-                    <div class="footer__subtitle">Услуги</div>
+                    <div class="footer__subtitle footer__subtitle__drop">Услуги</div>
                     <ul>
                         <li>
                             <a href="#">Физическая охрана</a>
@@ -379,7 +379,7 @@
                     </ul>
                 </div>
                 <div class="footer__item">
-                    <div class="footer__subtitle">ЧОО Витязь-96</div>
+                    <div class="footer__subtitle footer__subtitle__drop">ЧОО Витязь-96</div>
                     <ul>
                         <li>
                             <a href="#">О компании</a>
@@ -418,40 +418,6 @@
             </div>
         </div>
     </footer>
-
-	<div class="overlay">
-		<div class="modal" id="call">
-            <div class="modal__close">&times;</div>
-            <div class="modal__title">
-                Закажите звонок <br>
-                прямо сейчас
-            </div>
-            <form action="#" class="feed-form">
-                <input class="feed-form__name" type="text" name="name" placeholder="Ваше имя" required>
-                <input class="feed-form__phone" type="text" name="phone" placeholder="Ваш телефон" required>
-                <button class="button">Заказать звонок</button>
-            </form>
-            <div class="modal__private">Данные не будут переданы 3-м лицам</div>
-        </div>
-        <div class="modal" id="order">
-            <div class="modal__close">&times;</div>
-            <div class="modal__title">
-                Вызовите мастера <br>
-                прямо сейчас
-            </div>
-            <form action="#" class="feed-form">
-                <input class="feed-form__name" type="text" name="name" placeholder="Ваше имя" required>
-                <input class="feed-form__phone" type="text" name="phone" placeholder="Ваш телефон" required>
-                <button class="button">Вызвать мастера</button>
-            </form>
-            <div class="modal__private">Данные не будут переданы 3-м лицам</div>
-        </div>
-		<div class="modal modal_thanks" id="thanks">
-            <div class="modal__close">&times;</div>
-            <div class="modal__title">Ваша заявка <span>отправлена!</span> </div>
-            <div class="modal__subtitle">Мы свяжемся с Вами в течении 15 минут!</div>
-        </div>
-	</div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="js/jquery.maskedinput.min.js"></script>
