--- a/vityaz/index.html
+++ b/vityaz/index.html
@@ -8,7 +8,7 @@
     <title>Главная</title>
     <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
-<body>
+<body class="main-page">
 
     <section class="promo">
         <div class="container">
@@ -66,7 +66,6 @@
             </div>
         </div>
     </section>
-
     <main>
         <section class="services">
             <div class="container">
@@ -348,7 +347,6 @@
             </div>
         </section>
     </main>
-
     <footer class="footer">
         <div class="container">
             <div class="footer__box">
@@ -421,7 +419,6 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="js/jquery.maskedinput.min.js"></script>
-    <script src="js/slick.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
