--- a/vityaz/payment.html
+++ b/vityaz/payment.html
@@ -14,7 +14,7 @@
         <div class="container">
             <div class="header__box">
                 <a href="#" class="header__logo">
-                    <img src="img/about_logo.png" alt="#">
+                    <img src="img/logo.png" alt="#">
                 </a>
                 <nav class="header__menu">
                     <ul>
@@ -31,10 +31,10 @@
                             </ul>
                         </li>
                         <li>
-                            <a href="#">Акции</a>
+                            <a href="#">Оплата услуг</a>
                         </li>
                         <li>
-                            <a href="#">Контакты</a>
+                            <a href="#">Геолокация</a>
                         </li>
                     </ul>
                 </nav>
