--- a/vityaz/control.html
+++ b/vityaz/control.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <link rel="shortcut icon" href="img/favicon.png">
-    <title>Видеонаблюдение</title>
+    <title>Системы контроля</title>
     <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
-<body class="video-page">
+<body class="control-page">
 
     <header class="header">
         <div class="container">
@@ -51,130 +51,65 @@
         <section class="page-head">
             <div class="container">
                 <div class="page-head__top">
-                    <div class="section__title page-head__title">Видеонаблюдение</div>
+                    <div class="section__title page-head__title">Системы контроля и управления доступом</div>
                 </div>
                 <div class="page-head__descr">
-                    <p>Камеры видеонаблюдения обеспечивают контроль над происходящим и безопасность объекта. Современные системы видеонаблюдения способны не только зафиксировать вторжение злоумышленников, но и отпугнуть взломщиков, не желающих идти на лишний риск.</p>
-                    <p>Наша компания предлагает приобрести комплект, с помощью которого можно будет вести видеонаблюдение в квартире, коттедже, офисе и других объектах.</p>
-                </div>
-            </div>
-        </section>
-        <section class="variants">
-            <div class="container">
-                <div class="section__title">Варианты комплектации</div>
-                <div class="variants__items">
-                    <div class="variants__item variants__item__white">
-                        <div class="variants__item__box">
-                            <div class="variants__subtitle">Начальный</div>
-                            <ul class="variants__list">
-                                <li>Цветная уличная купольная камера день/ночь с встроенной ИК-подсветкой</li>
-                                <li>Видеорегистратор</li>
-                                <li>Блок питания</li>
-                                <li>Жесткий диск для цифровой видеозаписи на 1 Tb</li>
-                                <li>Монитор 19”</li>
-                            </ul>
-                            <div class="variants__price">от 30.000 руб.</div>
-                            <button class="btn">Оставить заявку</button>
-                        </div>
-                    </div>
-                    <div class="variants__item variants__item__gray">
-                        <div class="variants__item__box">
-                            <div class="variants__subtitle">Стандартный</div>
-                            <ul class="variants__list">
-                                <li>4 цветных уличных камеры день/ночь с встроенной ИК-подсветкой (в купольном или алюминиевом корпусе)</li>
-                                <li>Видеорегистратор</li>
-                                <li>Блок питания</li>
-                                <li>Жесткий диск для цифровой видеозаписи на 2 Tb</li>
-                                <li>Монитор 21,5”</li>
-                            </ul>
-                            <div class="variants__price">от 55.000 руб.</div>
-                            <button class="btn">Оставить заявку</button>
-                        </div>
-                    </div>
-                    <div class="variants__item variants__item__black">
-                        <div class="variants__item__box">
-                            <div class="variants__subtitle">Премиум</div>
-                            <ul class="variants__list">
-                                <li>4 цветных уличных камеры день/ночь с встроенной ИК-подсветкой (в купольном или алюминиевом корпусе)</li>
-                                <li>Видеорегистратор</li>
-                                <li>Блок питания</li>
-                                <li>Жесткий диск для цифровой видеозаписи на 3 Tb</li>
-                                <li>Монитор 19”</li>
-                            </ul>
-                            <div class="variants__price">от 30.000 руб.</div>
-                            <button class="btn">Оставить заявку</button>
-                        </div>
-                    </div>
+                    <p>Автономные и сетевые системы</p>
                 </div>
             </div>
         </section>
         <section class="device">
             <div class="container">
-                <div class="section__title">Оборудование для наблюдения</div>
+                <div class="section__title">Контроль и управление</div>
                 <div class="device__items">
                     <div class="device__item">
                         <div class="device__img">
-                            <img src="img/device_1.png" alt="#">
+                            <img src="img/device_8.png" alt="#">
                         </div>
-                        <div class="device__subtitle">Видеокамеры</div>
+                        <div class="device__subtitle">Турникет</div>
                     </div>
                     <div class="device__item">
                         <div class="device__img">
-                            <img src="img/device_2.png" alt="#">
+                            <img src="img/device_9.png" alt="#">
                         </div>
-                        <div class="device__subtitle">Экономичный цифровой <br> видеорегистратор</div>
+                        <div class="device__subtitle">Шлагбаум</div>
                     </div>
                     <div class="device__item">
                         <div class="device__img">
-                            <img src="img/device_3.png" alt="#">
+                            <img src="img/device_10.png" alt="#">
                         </div>
-                        <div class="device__subtitle">Источник бесперебойного <br> питания регистратора</div>
+                        <div class="device__subtitle">Ворота, калитки</div>
                     </div>
                     <div class="device__item">
                         <div class="device__img">
-                            <img src="img/device_4.png" alt="#">
+                            <img src="img/device_11.png" alt="#">
                         </div>
-                        <div class="device__subtitle">Монитор</div>
+                        <div class="device__subtitle">Дверь</div>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="objects">
+        <section class="modifier">
             <div class="container">
-                <div class="section__title">Для каких объектов подходит</div>
-                <div class="objects__items">
-                    <div class="objects__item">
-                        <div class="objects__left">
-                            <div class="objects__subtitle">В жилых помещениях</div>
-                            <div class="objects__text">
-                                Вы сможете присматривать за играющими или спящими детьми, занимаясь своими делами в другой комнате или наблюдать за выполнением своих обязанностей наемным персоналом – няней, репетитором и другими работниками
-                            </div>
+                <div class="section__title">По различным модификаторам</div>
+                <div class="modifier__items">
+                    <div class="modifier__item">
+                        <div class="modifier__img">
+                            <img src="img/modifier_1.png" alt="#">
                         </div>
-                        <div class="objects__right">
-                            <img src="img/objects_1.png" alt="#">
-                        </div>
+                        <div class="modifier__subtitle">Электронный ключ</div>
                     </div>
-                    <div class="objects__item">
-                        <div class="objects__left">
-                            <div class="objects__subtitle">В офисах</div>
-                            <div class="objects__text">
-                                Видеоконтроль обеспечивает безопасность сотрудников и имущества фирмы. Видеонаблюдение в офисе позволит заранее выявить потенциальную угрозу и предупредить появление посторонних лиц на территории. 
-                            </div>
+                    <div class="modifier__item">
+                        <div class="modifier__img">
+                            <img src="img/modifier_2.png" alt="#">
                         </div>
-                        <div class="objects__right">
-                            <img src="img/objects_2.png" alt="#">
-                        </div>
+                        <div class="modifier__subtitle">Отпечаток</div>
                     </div>
-                    <div class="objects__item">
-                        <div class="objects__left">
-                            <div class="objects__subtitle">На улице</div>
-                            <div class="objects__text">
-                                С помощью уличной системы видеонаблюдения можно будет следить на ситуацией на участке, возле ворот, на улице. Размеры оборудования позволяют с успехом вести скрытое наблюдение, что часто бывает необходимым. Кроме того, хозяин будет знать, что происходит в его квартире, даже если сам он находится далеко от дома.
-                            </div>
+                    <div class="modifier__item">
+                        <div class="modifier__img">
+                            <img src="img/modifier_3.png" alt="#">
                         </div>
-                        <div class="objects__right">
-                            <img src="img/objects_3.png" alt="#">
-                        </div>
+                        <div class="modifier__subtitle">Пароль</div>
                     </div>
                 </div>
             </div>
