--- a/vityaz/pult.html
+++ b/vityaz/pult.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <link rel="shortcut icon" href="img/favicon.png">
-    <title>Видеонаблюдение</title>
+    <title>Пультовая охрана</title>
     <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
-<body class="video-page">
+<body class="pult-page">
 
     <header class="header">
         <div class="container">
@@ -51,57 +51,44 @@
         <section class="page-head">
             <div class="container">
                 <div class="page-head__top">
-                    <div class="section__title page-head__title">Видеонаблюдение</div>
+                    <div class="section__title page-head__title">Пультовая охрана</div>
                 </div>
-                <div class="page-head__descr">
-                    <p>Камеры видеонаблюдения обеспечивают контроль над происходящим и безопасность объекта. Современные системы видеонаблюдения способны не только зафиксировать вторжение злоумышленников, но и отпугнуть взломщиков, не желающих идти на лишний риск.</p>
-                    <p>Наша компания предлагает приобрести комплект, с помощью которого можно будет вести видеонаблюдение в квартире, коттедже, офисе и других объектах.</p>
-                </div>
+                <ul class="page-head__list">
+                    <li>Централизованное наблюдение диспетчером за объектом при помощи радиоканальной охранной системы</li>
+                    <li>Выезд группы быстрого реагирования (ГБР)</li>
+                    <li>Тех. контроль и обслуживание охранной системы высоко квалифицированным инжинером</li>
+                    <li>Консультации и подготовка рекомендаций клиентам по вопросам правомерной защиты от противоправных посягательств</li>
+                </ul>
             </div>
         </section>
         <section class="variants">
             <div class="container">
-                <div class="section__title">Варианты комплектации</div>
+                <div class="section__title">Стоимость минимального комплекта системы (с установкой)</div>
                 <div class="variants__items">
-                    <div class="variants__item variants__item__white">
+                    <div class="variants__item">
                         <div class="variants__item__box">
-                            <div class="variants__subtitle">Начальный</div>
                             <ul class="variants__list">
-                                <li>Цветная уличная купольная камера день/ночь с встроенной ИК-подсветкой</li>
-                                <li>Видеорегистратор</li>
-                                <li>Блок питания</li>
-                                <li>Жесткий диск для цифровой видеозаписи на 1 Tb</li>
-                                <li>Монитор 19”</li>
+                                <li>Объект площадью до 100 м2</li>
+                            </ul>
+                            <div class="variants__price">от 25.000 руб.</div>
+                            <button class="btn">Оставить заявку</button>
+                        </div>
+                    </div>
+                    <div class="variants__item">
+                        <div class="variants__item__box">
+                            <ul class="variants__list">
+                                <li>Объект площадью до 100 м2</li>
                             </ul>
                             <div class="variants__price">от 30.000 руб.</div>
                             <button class="btn">Оставить заявку</button>
                         </div>
                     </div>
-                    <div class="variants__item variants__item__gray">
+                    <div class="variants__item">
                         <div class="variants__item__box">
-                            <div class="variants__subtitle">Стандартный</div>
                             <ul class="variants__list">
-                                <li>4 цветных уличных камеры день/ночь с встроенной ИК-подсветкой (в купольном или алюминиевом корпусе)</li>
-                                <li>Видеорегистратор</li>
-                                <li>Блок питания</li>
-                                <li>Жесткий диск для цифровой видеозаписи на 2 Tb</li>
-                                <li>Монитор 21,5”</li>
+                                <li>Объект площадью до 100 м2</li>
                             </ul>
-                            <div class="variants__price">от 55.000 руб.</div>
-                            <button class="btn">Оставить заявку</button>
-                        </div>
-                    </div>
-                    <div class="variants__item variants__item__black">
-                        <div class="variants__item__box">
-                            <div class="variants__subtitle">Премиум</div>
-                            <ul class="variants__list">
-                                <li>4 цветных уличных камеры день/ночь с встроенной ИК-подсветкой (в купольном или алюминиевом корпусе)</li>
-                                <li>Видеорегистратор</li>
-                                <li>Блок питания</li>
-                                <li>Жесткий диск для цифровой видеозаписи на 3 Tb</li>
-                                <li>Монитор 19”</li>
-                            </ul>
-                            <div class="variants__price">от 30.000 руб.</div>
+                            <div class="variants__price">от 35.000 руб.</div>
                             <button class="btn">Оставить заявку</button>
                         </div>
                     </div>
@@ -114,15 +101,9 @@
                 <div class="device__items">
                     <div class="device__item">
                         <div class="device__img">
-                            <img src="img/device_1.png" alt="#">
+                            <img src="img/device_5.png" alt="#">
                         </div>
-                        <div class="device__subtitle">Видеокамеры</div>
-                    </div>
-                    <div class="device__item">
-                        <div class="device__img">
-                            <img src="img/device_2.png" alt="#">
-                        </div>
-                        <div class="device__subtitle">Экономичный цифровой <br> видеорегистратор</div>
+                        <div class="device__subtitle">Передатчик</div>
                     </div>
                     <div class="device__item">
                         <div class="device__img">
@@ -132,49 +113,27 @@
                     </div>
                     <div class="device__item">
                         <div class="device__img">
-                            <img src="img/device_4.png" alt="#">
+                            <img src="img/device_6.png" alt="#">
                         </div>
-                        <div class="device__subtitle">Монитор</div>
+                        <div class="device__subtitle">Датчики слежения</div>
+                    </div>
+                    <div class="device__item">
+                        <div class="device__img">
+                            <img src="img/device_7.png" alt="#">
+                        </div>
+                        <div class="device__subtitle">Тревожная кнопка</div>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="objects">
+        <section class="note">
             <div class="container">
-                <div class="section__title">Для каких объектов подходит</div>
-                <div class="objects__items">
-                    <div class="objects__item">
-                        <div class="objects__left">
-                            <div class="objects__subtitle">В жилых помещениях</div>
-                            <div class="objects__text">
-                                Вы сможете присматривать за играющими или спящими детьми, занимаясь своими делами в другой комнате или наблюдать за выполнением своих обязанностей наемным персоналом – няней, репетитором и другими работниками
-                            </div>
-                        </div>
-                        <div class="objects__right">
-                            <img src="img/objects_1.png" alt="#">
-                        </div>
+                <div class="note__box">
+                    <div class="note__icon">
+                        <img src="img/note.png" alt="#">
                     </div>
-                    <div class="objects__item">
-                        <div class="objects__left">
-                            <div class="objects__subtitle">В офисах</div>
-                            <div class="objects__text">
-                                Видеоконтроль обеспечивает безопасность сотрудников и имущества фирмы. Видеонаблюдение в офисе позволит заранее выявить потенциальную угрозу и предупредить появление посторонних лиц на территории. 
-                            </div>
-                        </div>
-                        <div class="objects__right">
-                            <img src="img/objects_2.png" alt="#">
-                        </div>
-                    </div>
-                    <div class="objects__item">
-                        <div class="objects__left">
-                            <div class="objects__subtitle">На улице</div>
-                            <div class="objects__text">
-                                С помощью уличной системы видеонаблюдения можно будет следить на ситуацией на участке, возле ворот, на улице. Размеры оборудования позволяют с успехом вести скрытое наблюдение, что часто бывает необходимым. Кроме того, хозяин будет знать, что происходит в его квартире, даже если сам он находится далеко от дома.
-                            </div>
-                        </div>
-                        <div class="objects__right">
-                            <img src="img/objects_3.png" alt="#">
-                        </div>
+                    <div class="note__text">
+                        Количество датчиков слежения и кофигурация всей системы расчитывается инженером исходя из потребностей клиента, тех. особенностей объекта и требований регламентной документации
                     </div>
                 </div>
             </div>
